[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mess-methods"
version = "0.1.0"
description = "Research methodology and experimental design tools for MES research"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "MESSAI Community", email = "research@messai.io" }
]
keywords = [
    "research",
    "methodology",
    "experiment-design",
    "protocol",
    "mes",
    "mfc",
    "extraction",
    "validation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "PyPDF2>=3.0",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
mess-methods = "mess_methods.cli:main"

[project.urls]
Homepage = "https://github.com/Messai-io/MESS-Methods"
Documentation = "https://docs.messai.io/methods"
Repository = "https://github.com/Messai-io/MESS-Methods"
Issues = "https://github.com/Messai-io/MESS-Methods/issues"

[tool.hatch.build.targets.wheel]
packages = ["mess_methods"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "D"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=mess_methods"
